--- a/ClientPhone/Controls/AlertRequestControl.xaml
+++ b/ClientPhone/Controls/AlertRequestControl.xaml
@@ -20,12 +20,11 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
-            <ComboBox Margin="3" Width="180" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}" IsEditable="True" />
-            <CheckBox Margin="3" VerticalAlignment="Center" IsChecked="{Binding ShowDoned}">Отображать выполненные</CheckBox>
+            <!--<TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
+            <ComboBox Margin="3" Width="180" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}" IsEditable="True" />-->
             <WrapPanel>
                 <Button Width="80" Margin="5" Content="Обновить" Command="{Binding RefreshRequestCommand}"/>
-                <Button Width="120" Margin="5" Content="Сброс фильтров" Command="{Binding ClearFiltersCommand}"/>
+                <!--<Button Width="120" Margin="5" Content="Сброс фильтров" Command="{Binding ClearFiltersCommand}"/>-->
                 <TextBlock Margin="35,3,3,3" VerticalAlignment="Center" Text="Заявок:"/>
                 <TextBlock Margin="3,3,3,3" FontWeight="Bold" VerticalAlignment="Center" MinWidth="48" Text="{Binding RequestCount}"/>
             </WrapPanel>
@@ -44,36 +43,8 @@
                   CommandParameter="{Binding ElementName=RequestsGrid, Path=SelectedItem}" />
             </DataGrid.InputBindings>
             <DataGrid.Columns>
-                <DataGridTemplateColumn Width="30" >
-                    <DataGridTemplateColumn.HeaderStyle>
-                        <Style TargetType="DataGridColumnHeader">
-                            <Setter Property="ContentTemplate">
-                                <Setter.Value>
-                                    <DataTemplate>
-                                        <Image Source="pack://application:,,,/Images/attach.png" Height="24" HorizontalAlignment="Center"/>
-                                    </DataTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </DataGridTemplateColumn.HeaderStyle>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate DataType="dto:RequestForListDto">
-                            <Image Source="pack://application:,,,/Images/attach.png" Height="24" Visibility="{Binding HasAttachment, Converter={StaticResource BooleanToVisibility} }"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-
                 <DataGridTextColumn Header="№" Width="60"
                              Binding="{Binding Path=Id}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Статус" Width="80"
-                                    Binding="{Binding Path=Status}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -110,16 +81,6 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="ФИО" Width="110"
-                             Binding="{Binding Path=MainFio}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
                 <DataGridTextColumn Header="Услуга" Width="100"
                              Binding="{Binding Path=ParentService}">
                     <DataGridTextColumn.ElementStyle>
@@ -142,83 +103,6 @@
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="Примечание" Width="160"
                              Binding="{Binding Path=Description}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Исполнитель" Width="120"
-                             Binding="{Binding Path=Master.ShortName}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Дата исполнения" Width="110"
-                             Binding="{Binding Path=ExecuteTime, StringFormat='{}{0:dd.MM.yyyy}'}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Период" Width="100"
-                             Binding="{Binding Path=ExecutePeriod}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Создатель" Width="120"
-                             Binding="{Binding Path=CreateUser.ShortName}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Выполнение с" Width="80"
-                                    Binding="{Binding Path=FromTime, StringFormat='{}{0: HH:mm:ss}'}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Выполнение по" Width="80"
-                                    Binding="{Binding Path=ToTime, StringFormat='{}{0: HH:mm:ss}'}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-
-                <DataGridTextColumn Header="Потрачено времени" Width="80"
-                                    Binding="{Binding Path=SpendTime}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-
-                <DataGridTextColumn Header="Оценка" Width="40"
-                             Binding="{Binding Path=Rating}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
