--- a/ClientPhone/Controls/RequestItem.xaml
+++ b/ClientPhone/Controls/RequestItem.xaml
@@ -150,8 +150,8 @@
                         <Image Source="pack://application:,,,/Images/edit_small.png"/>
                     </Button>
 
-                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Оборудование:"/>
-                    <ComboBox Margin="3" IsEnabled="{Binding CanSave}" Width="350" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedEquipment}" ItemsSource="{Binding EquipmentList}" IsEditable="True">
+                    <TextBlock Visibility="Collapsed" Margin="3" VerticalAlignment="Center" Text="Оборудование:"/>
+                    <ComboBox Visibility="Collapsed" Margin="3" IsEnabled="{Binding CanSave}" Width="350" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedEquipment}" ItemsSource="{Binding EquipmentList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
