[~] - CallCenter 3.33. Фильтры по мастерам, УК, исполнителям как по адресам + 2.23 для АИЖК

--- a/ClientPhone/MainWindow.xaml
+++ b/ClientPhone/MainWindow.xaml
@@ -797,8 +797,8 @@
                     </DockPanel>
                 </Grid>
             </TabItem>
-            <!--<TabItem Visibility="{Binding IsAdminRoleExist}">-->
-            <TabItem>
+            <TabItem Visibility="{Binding IsAdminRoleExist}">
+            <!--<TabItem>-->
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <Image  Source="pack://application:,,,/Images/settings_small.png" Stretch="UniformToFill" Height="28" />
